Add comprehensive governance and POC project documentation
- Add governance gap analysis for 2025-11-15
- Add platform nodes architecture documentation
- Add POC4 (CodeRabbit) Phase 4 MCP deployment documentation:
  - Implementation guide
  - Architecture design
  - Roles and responsibilities
  - Prerequisites setup
  - Client configuration
  - Test plan
  - Docling analysis
- Add POC5 (n8n MCP) deployment project documentation:
  - Foundation documents (charter, architecture, roles, knowledge, credentials)
  - Project plan with 7-phase methodology
  - Process rules and templates
  - Review documents
- Add flowchart diagram for governance process

--- a/0.0-governance/0.0.2-Archtecture/0.0.2.1-platform-nodes.md
+++ b/0.0-governance/0.0.2-Archtecture/0.0.2.1-platform-nodes.md
@@ -82,87 +82,85 @@
 
 ## Agentic + Toolchain
 
-> **Note:** `hx-fastmcp-server` includes a **Brave Search MCP** integration (plugin/internal client) that enables secure web & document search, exposed through FastMCPâ€™s unified interface. Services (MCP + Workers)
+> **Note:** `hx-fastmcp-server` includes a **Brave Search MCP** integration (plugin/internal client) that enables secure web & document search, exposed through FastMCP's unified interface. Services (MCP + Workers)
 
-### hx-fastmcp-server (192.168.10.213)
-**Includes:** Brave Search MCP client for secure, context-aware web search and retrieval exposed through the FastMCP unified server. â€” âœ…
-**Role:** Highâ€‘throughput MCP **server + client** (unified entry point).
+### hx-fastmcp-server (192.168.10.213) — ✅
+**Includes:** Brave Search MCP client for secure, context-aware web search and retrieval exposed through the FastMCP unified server.
+**Role:** High-throughput MCP **server + client** (unified entry point).
 **Primary responsibilities:** Execute tools at scale; expose standardized MCP endpoints; **compose and proxy** downstream MCP services within a single Python application.
 
-### hx-n8n-mcp-server (192.168.10.214) — ⬜
+### hx-n8n-mcp-server (192.168.10.214) — ✅
 **Role:** n8n Model Context Protocol (MCP) server.
 **Primary responsibilities:** Acts as a bridge that allows LLMs to securely interact with and control n8n workflows through a standardized interface. Enables AI assistants to leverage n8n's visual, low-code automation to perform real-world tasks.
-**Status:** NOT OPERATIONAL - Server not deployed/accessible
+**Data/Paths:** `/srv/n8n-mcp-deployment`
+**Deployed:** November 11, 2025
 
-### hx-n8n-server (192.168.10.215) â€” â¬œ
+### hx-n8n-server (192.168.10.215) — ⬜
 **Role:** Orchestration/automations (not operational).
 **Primary responsibilities:** Intended for job scheduling, CI smoke tests, and notifications.
 
-### hx-docling-mcp-server (192.168.10.217) â€” âœ…
+### hx-docling-mcp-server (192.168.10.217) — ✅
 **Role:** Docling MCP endpoint.
 **Primary responsibilities:** Expose document parsing and ingestion capabilities to agents.
 
-### hx-docling-server (192.168.10.216) â€” âœ…
+### hx-docling-server (192.168.10.216) — ✅
 **Role:** Docling worker node.
 **Primary responsibilities:** Perform internal/external document retrieval, parsing, and conversion.
 
-### hx-crawl4ai-mcp-server (192.168.10.218) â€” âœ…
+### hx-crawl4ai-mcp-server (192.168.10.218) — ✅
 **Role:** Crawl4AI MCP endpoint.
 **Primary responsibilities:** Provide controlled web scraping capabilities through MCP for agents.
 
-### hx-crawl4ai-server (192.168.10.219) â€” âœ…
+### hx-crawl4ai-server (192.168.10.219) — ✅
 **Role:** Crawl4AI worker node.
 **Primary responsibilities:** Execute web crawling for internal/external sites and corpus gathering.
 
-### hx-literag-server (192.168.10.220) â€” âœ…
+### hx-literag-server (192.168.10.220) — ✅
 **Role:** LightRAG Server.
 **Primary responsibilities:** Efficient Retrieval-Augmented Generation (RAG) framework that builds a knowledge graph of relationships between entities and concepts. Employs dual-level retrieval (semantic vector search + knowledge graph context) for comprehensive and relevant answers.
 
-### hx-coderabbit-server (192.168.10.228) â€” âœ…
-**Role:** CodeRabbit MCP server.
+### hx-coderabbit-server (192.168.10.228) — ⚠️
+**Role:** CodeRabbit MCP server (Reserved).
 **Primary responsibilities:** Allow AI agents to interact with the CodeRabbit AI platform and local Git repositories via MCP. Provides tools for AI-assisted code review and development context integration.
+**Status:** Reserved - Not yet deployed (IP allocated, port 8005 designated)
 
-### hx-shadcn-server (192.168.10.229) â€” â¬œ
+### hx-shadcn-server (192.168.10.229) — ⬜
 **Role:** Shadcn MCP server.
 **Primary responsibilities:** Standalone TypeScript-based server acting as a bridge between AI agents and component registries. Enables structured component discovery and integration.
 
 ---
 
-## Application and Userâ€‘Facing Layers (Two Entry Points)
+## Application and User-Facing Layers (Two Entry Points)
 
-### Entry Point 1 â€” hx-webui-server (192.168.10.227) â€” âœ…
+### Entry Point 1 — hx-webui-server (192.168.10.227) — ✅
 **Role:** Open WebUI for chat/agent UX (behind hx-ssl-server).
 **Primary responsibilities:** Provide full MCP tool access; user auth via DC/Kerberos.
 **Uses:** LiteLLM; Docling/Crawl4AI via MCP; Qdrant via QMCP.
 
-### Entry Point 2 â€” Custom Next.js Apps (hx-dev â†’ hx-demo) â€” ðŸ› ï¸/ðŸ› ï¸
-**hx-dev-server (192.168.10.222)** â€” Build & run containerized Next.js solutions that consume platform services.
-**hx-demo-server (192.168.10.223)** â€” Receive promoted containers for stakeholder demos; mirror platform integrations.
+### Entry Point 2 — Custom Next.js Apps (hx-dev → hx-demo) — 🛠️/🛠️
+**hx-dev-server (192.168.10.222)** — Build & run containerized Next.js solutions that consume platform services.
+**hx-demo-server (192.168.10.223)** — Receive promoted containers for stakeholder demos; mirror platform integrations.
 **Primary responsibilities (both):** App hosting, API consumption (LiteLLM, LangChain, QMCP), secure ingress via hx-ssl-server.
 **Data/Paths:** `/srv/apps/dev` and `/srv/apps/demo` (images/config kept under SCM + registry; exact repo/registry TBD).
 
-### hx-agui-server (192.168.10.221) â€” ðŸ› ï¸
-**Role:** Shared dashboards/admin consoles.
-**Primary responsibilities:** Ops consoles, admin UIs, internal tooling surfaces.
+---
 
 ---
 
 ## Integration, Coordination, and Observability
 
-### hx-cc-server (192.168.10.224) â€” âœ…
+### hx-cc-server (192.168.10.224) — ✅
 **Role:** Claude Code systems integrator & knowledge hub.
 **Primary responsibilities:** Coordinate agent runs; manage local knowledge.
 **Authoritative storage:** `/srv/knowledge/vault` and `/srv/knowledge/vault/agentic-design-patterns-docs-main`.
 
-### hx-metric-server (192.168.10.225) â€” â¬œ
+### hx-metric-server (192.168.10.225) — ⬜
 **Role:** Metrics/telemetry (planned; not operational).
-**Primary responsibilities:** Centralize logs/metrics; longâ€‘retention storage.
+**Primary responsibilities:** Centralize logs/metrics; long-retention storage.
 
-### hx-lang-server (192.168.10.226) â€” ðŸ› ï¸
+### hx-lang-server (192.168.10.226) — 🛠️
 **Role:** LangChain Server.
 **Primary responsibilities:** Host LangChain instance used by apps/agents for chaining.
-
----
 
 ---
 
@@ -176,26 +174,28 @@ After documenting all server nodes, several refinements are suggested for the **
 4. **Roles and Responsibilities** in the scope doc can be expanded to identify the nodes (by host) each agent primarily interacts with.
 
 ### Updated Traceability Map
-- **Frontend/UI â†’** `hx-webui`, `hx-agui`, custom Next.js apps on `hx-dev` â†’ `hx-demo`
-- **Backend & Integration Services â†’** `hx-litellm`, `hx-fastmcp` (w/ Brave Search MCP), `hx-n8n*`, `hx-docling*`, `hx-crawl4ai*`, `hx-coderabbit`, `hx-shadcn`, `hx-lang`, `hx-literag`
-- **Data & Model Infrastructure â†’** `hx-postgres`, `hx-redis`, `hx-qdrant`, `hx-qmcp`, `hx-ollama*`
-- **API Gateway â†’** `hx-litellm`
-- **Platform & Infrastructure â†’** `hx-dc`, `hx-ca`, `hx-ssl`, `hx-control`
-- **DevOps & Governance â†’** `hx-cc`, `hx-metric`
+- **Frontend/UI →** `hx-webui`, `hx-agui`, custom Next.js apps on `hx-dev` → `hx-demo`
+- **Backend & Integration Services →** `hx-litellm`, `hx-fastmcp` (w/ Brave Search MCP), `hx-n8n-mcp`, `hx-n8n`, `hx-docling*`, `hx-crawl4ai*`, `hx-lang`, `hx-literag`
+- **Data & Model Infrastructure →** `hx-postgres`, `hx-redis`, `hx-qdrant`, `hx-qmcp`, `hx-ollama*`
+- **API Gateway →** `hx-litellm`
+- **Platform & Infrastructure →** `hx-dc`, `hx-ca`, `hx-ssl`, `hx-control`
+- **DevOps & Governance →** `hx-cc`, `hx-metric`
+- **Reserved (Not Deployed) →** `hx-coderabbit`, `hx-shadcn`
 
 > The updated scope document should incorporate this mapping in an appendix or reference table to maintain one-to-one traceability between agents and their operational infrastructure.
 
 ---
 
-## Appendix A â€” Host File Reference (as of 2025â€‘10â€‘30)
+## Appendix A — Host File Reference (as of 2025-11-15)
 
 Below is the formatted static hosts file as implemented in the HX infrastructure project. This version preserves domain suffixes, aliases, and comments for traceability. Following the listing is a server count summary.
 
 ```
 # =====================================================================
-# HX Infrastructure Project â€” Static hosts file
+# HX Infrastructure Project — Static hosts file
 # Domain: hx.dev.local
-# Generated: 2025â€‘10â€‘21
+# Generated: 2025-10-21
+# Last Updated: 2025-11-15
 # =====================================================================
 
 127.0.0.1   localhost
@@ -240,7 +240,11 @@ ff02::2     ip6-allrouters
 ```
 
 ### Server Summary
-- **Total servers:** 30 active nodes defined in infrastructure
+- **Total servers:** 30 nodes defined in infrastructure
+- **Status breakdown:**
+  - **Active (✅):** 27 nodes
+  - **In-Progress (🛠️):** 3 nodes (hx-dev, hx-demo, hx-agui, hx-lang)
+  - **Reserved/TBD (⬜/⚠️):** 4 nodes (hx-n8n, hx-metric, hx-coderabbit, hx-shadcn)
 - **Primary categories:**
   - **Identity & Control:** 4 nodes
   - **Model & Inference:** 5 nodes
@@ -251,7 +255,7 @@ ff02::2     ip6-allrouters
 
 ---
 
-**Version**: 4.0  
+**Version**: 4.1  
 **Maintained By**: Hana-X Governance Team  
 **Related Documents**:  
 - [Project Scope](../0.0.1-Planning/0.0.1.1-project-scope.md)  
@@ -259,5 +263,6 @@ ff02::2     ip6-allrouters
 - [Network Topology](./0.0.2.3-network-topology.md)  
 **Classification**: Internal - Governance  
 **Status**: ACTIVE - Authoritative baseline for infrastructure  
-**Last Review**: November 6, 2025
+**Last Review**: November 15, 2025  
+**Change Summary**: Updated hx-n8n-mcp-server to Active (deployed Nov 11); corrected hx-coderabbit-server to Reserved status; fixed character encoding issues throughout; updated server status summary.
 
